--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
 	<groupId>com.sangupta</groupId>
 	<artifactId>httpd</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0-SNAPSHOT</version>
 
 	<packaging>jar</packaging>
 
@@ -82,7 +82,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>httpd</finalName>
+		<finalName>httpd-${project.version}</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
