--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,14 @@
 			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
 		</license>
 	</licenses>
+	
+	<distributionManagement>
+		<repository>
+			<id>sangupta-binaries</id>
+			<name>Sandeep Gupta Binary Releases</name>
+			<url>file:c:/git/sangupta/binaries</url>
+		</repository>
+	</distributionManagement>
 
 	<scm>
 		<connection>scm:git:https://github.com/sangupta/httpd.git</connection>
