--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,11 @@
 <?xml version="1.0"?>
-<project
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.sangupta</groupId>
 	<artifactId>httpd</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.1-SNAPSHOT</version>
 
 	<packaging>jar</packaging>
 
@@ -43,7 +41,8 @@
 		<connection>scm:git:https://github.com/sangupta/httpd.git</connection>
 		<developerConnection>scm:git:git@github.com:sangupta/httpd.git</developerConnection>
 		<url>https://github.com/sangupta/httpd</url>
-	</scm>
+	  <tag>HEAD</tag>
+  </scm>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -78,7 +77,14 @@
 		<dependency>
 			<groupId>com.sangupta</groupId>
 			<artifactId>jerry-core</artifactId>
-			<version>1.4.0</version>
+			<version>1.5.0</version>
+		</dependency>
+		
+		<!-- for command line parsing -->
+		<dependency>
+		    <groupId>io.airlift</groupId>
+		    <artifactId>airline</artifactId>
+		    <version>0.7</version>
 		</dependency>
 
 		<!-- Prevent logging -->
