--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 language: java
 
+sudo: false
+
 jdk:
   - openjdk7
   - oraclejdk7
-
+  - oraclejdk8
+  
 after_success:
   - mvn clean test cobertura:cobertura org.eluder.coveralls:coveralls-maven-plugin:cobertura
